[gd_scene load_steps=9 format=3 uid="uid://bykhppp25q0mb"]

[ext_resource type="Script" uid="uid://uxj6xhy58tqe" path="res://scripts/choose_booster.gd" id="1_rsvmj"]
[ext_resource type="Theme" uid="uid://6shp5ck1tnja" path="res://gui/FlatUI4/kenneyUI.tres" id="3_4k4yi"]
[ext_resource type="FontFile" uid="uid://d0gaa71hjim87" path="res://gui/ProtestRevolution-Regular.ttf" id="3_a7wdi"]
[ext_resource type="Texture2D" uid="uid://kj811blknuv6" path="res://gui/background.jpg" id="3_uwart"]
[ext_resource type="Texture2D" uid="uid://h2req1ywpsss" path="res://cards/1/0.jpg" id="4_uwart"]
[ext_resource type="Theme" uid="uid://bnhngmri4tfgr" path="res://gui/FlatUI4/kenneyUI-green.tres" id="5_htltk"]
[ext_resource type="Texture2D" uid="uid://bnwfd2uyb8wi7" path="res://gui/boosterpack_empty.png" id="6_6x3o1"]
[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://gui/FlatUI4/kenneyUI-red.tres" id="7_6o1s3"]

[node name="ChooseBooster" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4k4yi")
script = ExtResource("1_rsvmj")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 565)
texture = ExtResource("3_uwart")

[node name="ButtonOpenBooster" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -201.0
offset_top = -321.0
offset_right = 599.0
offset_bottom = 775.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("4_uwart")
texture_pressed = ExtResource("4_uwart")
texture_hover = ExtResource("4_uwart")
texture_disabled = ExtResource("4_uwart")
texture_focused = ExtResource("4_uwart")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 506.0
offset_top = 905.0
offset_right = 1414.0
offset_bottom = 1028.0

[node name="ButtonLeft" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_htltk")
theme_override_fonts/font = ExtResource("3_a7wdi")
theme_override_font_sizes/font_size = 72
text = "<"

[node name="ButtonHome" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("7_6o1s3")
theme_override_fonts/font = ExtResource("3_a7wdi")
theme_override_font_sizes/font_size = 72
text = "x"

[node name="ButtonRight" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_htltk")
theme_override_fonts/font = ExtResource("3_a7wdi")
theme_override_font_sizes/font_size = 72
text = ">"

[node name="BoosterTemplate" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 755.0
offset_top = 183.0
offset_right = 1162.0
offset_bottom = 822.0
mouse_filter = 2
texture = ExtResource("6_6x3o1")

[node name="title" type="Label" parent="BoosterTemplate"]
layout_mode = 0
offset_left = -3.0
offset_top = -14.0
offset_right = 409.0
offset_bottom = 161.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_a7wdi")
theme_override_font_sizes/font_size = 48
text = "NAKAMA TCG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="set" type="Label" parent="BoosterTemplate"]
layout_mode = 0
offset_left = -3.0
offset_top = 466.0
offset_right = 409.0
offset_bottom = 641.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_a7wdi")
theme_override_font_sizes/font_size = 48
text = "Set #1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Collection" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 128.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_a7wdi")
theme_override_font_sizes/font_size = 64
text = "Set X: X/X"
horizontal_alignment = 1

[node name="NotMoney" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -523.0
offset_top = -89.5
offset_right = 523.0
offset_bottom = 89.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4k4yi")

[node name="Label" type="Label" parent="NotMoney"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_a7wdi")
theme_override_font_sizes/font_size = 136
text = "NOT ENOUGH MONEY"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ButtonOpenBooster" to="." method="_on_button_open_booster_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonLeft" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonHome" to="." method="_on_button_home_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonRight" to="." method="_on_button_right_pressed"]
